--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,16 @@ img {
     margin-top: 25px;
     margin-left: 8px; 
 }
+
+/* tim-img */
+.tim-img {
+    margin-left: 8px;
+}
+
+.main-paragraph {
+    margin-left: 8px;
+}
+
+.ul {
+    margin-left: -16px;
+}
