--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ img {
     height: 70px;
 }
 
+.author {
+    text-decoration: none;
+}
+
 /* page-logo */
 .logo {
     height: 40px;
@@ -35,4 +39,33 @@ img {
     margin-left: -16px;
 }
 
-/* table */
+.second-half {
+    margin-left: 8px;
+}
+
+.page-footer {
+    margin-left: 8px;
+}
+
+.footer-title {
+    color: #848484;
+}
+
+.monitor {
+    background-image: url('../img/monitor.jpg');
+    background-repeat: no-repeat;
+    height: 133px;
+    width: 200px;
+    background-size: contain;
+    color: #ffffff;
+}
+.graph {
+    background-image: url('../img/graph.jpg');
+    background-repeat: no-repeat;
+    height: 133px;
+    width: 200px;
+    background-size: contain;
+    color: #ffffff;
+}
+
+.third-row
